json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,73 @@
 {
  "items": [
   {
+    "id": "BCuTWMxhQNOXSPJlxBnOow",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/spiceblue/jobs/72948-growth-hacking-freshers-experienced",
+    "title": "Growth Hacking Freshers/Experienced",
+    "content": "<div><h2>Growth Hacking Freshers/Experienced at Spiceblue</h2><div>Chennai, Remote · Full Time</div></div><div><div>Skills</div><div>Sales and Marketing, Marketing Research, Good communication skills</div><div>Compensation</div><div>₹120K–₹300K<br>No Equity</div></div><h3>Job Description</h3><div><p>What are we looking for? Well, you are part marketer and part hacker, but you are obsessed with growing our customer base.</p><p>In this cross-functional role, you’ll be able to learn a lot, and will have exposure to all levels of the organization.<br>We are hoping you can help us go on the offensive and make a much larger dent in the universe. Take a look at : <a href='http://www.spiceblue.com' rel='nofollow'>www.spiceblue.com</a> , and if you feel this venture thrills you, get in touch with us.</p><p>Required Skills:</p><p>#Must have the passion to self-motivate, the guile to sell your ideas to other stakeholders, and the drive to execute those ideas cross-functionally<br>#Ability to operate at an extremely fast pace environment.</p></div>",
+    "urlFetchPending": false,
+    "published": "May 26, 2018 10:24:55 AM",
+    "tags": [
+      "Chennai",
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Time",
+      "Good communication skills",
+      "Growth Hacker",
+      "Marketing",
+      "Marketing Research",
+      "REMOTE1/100",
+      "Remote OK",
+      "Sales and Marketing",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ]
+  },
+  {
+    "id": "6gDXYlqPQ6q978Vd8aqlAw",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "workinstartups-consultants",
+    "url": "http://workinstartups.com/job-board/job/69388/why-this-software-implementation-consultant-role-is-like-star-wars-at-mongoose-gray/",
+    "title": "Why this Software Implementation Consultant role is like Star Wars.",
+    "content": "*Implement products and solutions. Own a portfolio of projects, liaise with customers, manage projects and create documentation.* <br /><br />_Because Luke didn’t just wake up with a new hand._<br /><br />*Manage small and large-scale projects, lasting from two to ten months.*<br /><br />_Some of it’s like blowing up the Death Star and some of it’s like climbing a mountain on an island for three hours._<br /><br />*Collaborate with project managers, developers and support. As your experience grows, share your insights with the team, and mentor new recruits.*<br /><br />_Be Luke._<br /><br />*Design and configure templates for documentation. There may be system integrations (via APIs) and mapping technical flows.*<br /><br />_Tear this ship apart until you’ve found those plans!_<br /><br />*Train non-technical end users, with empathy and patience, via webinars or in person.*<br /><br />_Be Obi-Wan._<br /><br />*Travel to client offices, primarily in London and within the UK.*<br /><br />_Go to Tosche Station to pick up power converters._<br /><br />*Work with clients and colleagues, understand their requirements, and keep them engaged.*<br /><br />_Be Lando._<br /><br />*Build and configure software, and identify system and relationship enhancements.*<br /><br />_Because someone really goofed with that Meridian trench and thermal exhaust port._<br /><br />*Document all communications and create specifications, guides, SoWs and workflows for set-up, portal requirements and integrations.*<br /><br />_Leia popped a hologram in an R2 unit in 1977. You can do a Word doc or two in 2018._<br /><br />*Create and maintain deliverables across the project lifecycle.*<br /><br />_It’s not heroic, but do it right and they’ll love you. Like Chewie._<br /><br />*Assist with the Sprint Delivery roadmap, using Targetprocess and/or MS Project. Ensure plans, reports, RACI and RAID logs are stored and maintained, using SharePoint.*<br /><br />_As Harrison Ford told George Lucas, “You can type this s**t, but you can't say it!&quot;_<br /><br />*Design and visualize workflows, wireframing and data specifications, including user stories and acceptance criteria (via Targetprocess). Present client review reports/case studies and analysis. Providing status updates to the client services manager. Identify opportunities to optimize performance, promote programs, and grow accounts.*<br /><br />_We won’t lie. This sounds like stuff C-3PO would do while everyone else is running round with lightsabers._<br /><br />*Manage confidential and proprietary information.*<br /><br />_Cut someone’s hand off? Maybe wait a while before bragging you’re their dad._<br /><br />*You’ll need a Computer Science degree.*<br /><br />_It’s not like you can be a scavenger or a farmhand, then suddenly save the galaxy… oh._<br /><br />*Essential experience: at least one year in technical implementation or SaaS delivery; leading large and concurrent projects in a pressured environment with demanding clients and shifting priorities; system and data analysis, technical documentation and process assessments; delivering presentations and chairing client-facing meetings at all levels; Targetprocess, Microsoft Office, SharePoint, MySQL and SQL server; GDPR.*<br /><br />_Padmé Amidala was a senator. And a queen. And cofounder of the Rebel Alliance. And Luke and Leia’s mom. That’s the kind of résumé we’re looking for._<br /><br />*Useful experience: working independently with customers in the field, knowledge of accounting systems, translating client requirements into software, APIs and data transfer protocols.*<br /><br />_Rey’s cool when she’s being badass. Then it turns out she’s down with the Force. Have strings to your bow._<br /><br />*High-quality verbal and written communication, and analytical and technical skills.*<br /><br />_Little-known fact: Boba Fett maintained an erudite, helpful blog. At least until he fell in a pit._<br /><br />*Quick learner; confident; decisive; pragmatic; proactive; team worker; reliable.*<br /><br />_Be Han._<br /><br />*It pays up to £40,000 p.a. and we offer £50 per month towards gym membership, and a quarterly incentive scheme.*<br /><br />_Yoda doesn’t get out of bed for anything less._<br /><br />*Interested?*<br /><br />Send CV + covering letter. That's right you don't go fishing without a hook. May the force be with you.",
+    "urlFetchPending": false,
+    "published": "May 25, 2018 9:47:49 PM",
+    "tags": [
+      "DBG:surround``OR(travel,visit) W to 4W OR(offic,headquart,onsit)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:sql-server/dotnet/1",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=1, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ]
+  },
+  {
     "id": "ohcOKQwXTmG938LKAm7GTg",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -2187,70 +2254,6 @@
     ],
     "tagsNames2": [
       "bigdata-ml"
-    ]
-  },
-  {
-    "id": "thgufiAOTLKwV6h2O8MmfA",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "authenticjobs.com",
-    "url": "https://authenticjobs.com/jobs/30471?r=rss2",
-    "title": "Qkids: Online English Teacher - Work from home",
-    "content": "<p>Part-time</p><p><strong>(Anywhere)</strong> </p><div><p><strong>Online English Teacher, </strong><strong>p</strong><strong>art</strong><strong>-</strong><strong>time</strong><strong>, work from home</strong></p><p></p></div><div><p><strong>Employment type</strong>: Contract, part-time</p><p><strong>Duration</strong>: Flexible</p><p><strong>Start date</strong>: ASAP</p><p><strong>Location</strong>: Remote, online</p><p><strong>Hours</strong>: 6-19 hours/week</p><p><strong>Rate</strong>: $16-20 USD/hr&nbsp;(2 lessons)</p></div><p><strong><u>About Qkids</u></strong><u></u></p><p>Qkids is an interactive online teaching platform that connects English teachers to young language learners with fun, user-friendly software in real time. Guiding learners through a curriculum of fun, dynamic, and engaging narrative gaming adventures, English teachers from the United States and Canada lead learners to English mastery from the comfort of their own homes. Qkids provides great support and incredible workplace flexibility that caters to any schedule. Join today! <a href='https://www.facebook.com/JoinQkids/' rel='nofollow'><u>https://www.facebook.com/JoinQkids/</u></a>&nbsp;</p><p><strong><u>Responsibilities</u></strong><u></u></p><p>-Teach English to learners between 5 - 12 years of age through Qkids’ interactive online teaching&nbsp;platform. Each in-lesson time is 30 minutes.&nbsp;All curricula are preset and incorporated with animated characters and games. Training and&nbsp;support provided. </p><p>-Available to teach a minimum of 6 hours (12 lessons) per week. There are 19 hours (38 lessons) available weekly.</p><p><strong>[</strong><strong>Qkids</strong><strong>&nbsp;class time slots]</strong></p><p>7 days a week - Morning Eastern Time (AM - EST): 6:40-7:10, 7:20-7:50, 8:00-8:30, 8:40-9:10</p><p>Plus Friday and Saturday - Night Eastern Time (PM&nbsp;-&nbsp;EST): 8:40-9:10, 9:20-9:50, 10:00-10:30, 10:40-11:10, 11:20-11:50</p><p><strong><u>Requirements</u></strong><u></u></p><p>- Eligible to legally work in the U.S. or Canada</p><p>- Earned a degree or currently enrolled in a university program</p><p>- Prior teaching experience or equivalent in education, tutoring, mentoring, schooling&nbsp;preferred. This can be any form of teaching related, such as homeschooling. </p><p><strong><u>Hiring Process</u></strong><u></u></p><p>Apply with all required materials - Initial screening - Demo Interview 1 - Demo Interview 2 - Trial Classes (paid) - Hired! </p><p><strong><u>Follow Qkids</u></strong></p><p>Website: <a href='http://teacher.qkids.net/' rel='nofollow'><u>http://teacher.qkids.net/</u></a>&nbsp;</p><p>Facebook&nbsp;: <a href='https://www.facebook.com/JoinQkids/' rel='nofollow'><u>https://www.facebook.com/JoinQkids/</u></a>&nbsp;</p><p>LinkedIn&nbsp;: <a href='https://www.linkedin.com/company/qkids.net/' rel='nofollow'><u>https://www.linkedin.com/company/qkids.net/</u></a> </p><p>Glassdoor&nbsp;: <a href='https://www.glassdoor.com/Reviews/QKids-Reviews-E1339997.htm' rel='nofollow'><u>https://www.glassdoor.com/Reviews/QKids-Reviews-E1339997.htm</u></a>&nbsp;</p><p>Blog&nbsp;: <a href='http://www.qkidsblog.com/' rel='nofollow'><u>http://www.qkidsblog.com/</u></a>&nbsp;</p><p><em>This opportunity: Contract, Part</em><em>-</em><em>time, Work from home, </em><em>remote, </em><em>Online, Work online, Tutor, English Teacher, Students</em><em>, stay at home, qkids, teach online</em></p><p></p><p><strong>Questions? </strong><a href='http://teacher.qkids.net/faq' rel='nofollow'><strong><u>http://teacher.qkids.net/faq</u></strong></a><strong> </strong></p><p></p><p><strong>Job Perks:</strong> Work from home, part-time and flexible schedule.</p><p><strong>Apply:</strong> </p>",
-    "urlFetchPending": false,
-    "published": "Mar 26, 2018 6:54:14 PM",
-    "tags": [
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
-      "DBG_TECH1:k/t/w:animation/gamedev/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=8, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/gamedev",
-      "TITLE1/unknown",
-      "TZ/America/East"
-    ],
-    "tagsNames1": [
-      "US East time zone",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "gamedev"
-    ]
-  },
-  {
-    "id": "9AZ1qlbcQO6cIMl5EG83Rg",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "angel.co",
-    "url": "https://angel.co/banian-labs/jobs/127522-date-entry-and-assistant-part-time",
-    "title": "Date Entry and Assistant( Part Time)",
-    "content": "<div><h2>Date Entry and Assistant( Part Time) at Banian Labs</h2><div>Los Angeles, Remote · Contract</div><div></div></div><div><div>Skills</div><div>Office Administration, Executive Assistant, Office Management, Administrative Assistant</div><div>Compensation</div><div>$5K–$20K<br>No Equity</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Position: Data Entry and Assistant <br>Location: Palo Alto or Remote <br>Status: Part Time, 10-15 hours per week <br>Estimated Duration: Ongoing<br>Starts: Within the Week<br>Rate: Up to $10-20/hr DOE</p><p>Job Description:<br>A Saas software company needs junior level -data entry and assistant to join their team!</p><p>You will report to the head of product and marketing to work on lead generations and sales funnels.</p><p>Required: <br>- 1+ years of experience<br>- Experience with Microsoft world and Excel and tech savvy with office software tools. <br>- B2C experience<br>- Adobe Creative Suite is bonus not required.</p><p>10-15 per week, for an ongoing contract. Office is biking distance to California Ave Cal train.</p><p>If you feel you are qualified for this position please reply directly to this email with a link to your profile (Linkedin, Angel List) or  attach your resume. Tell us why you are qualified for this opportunity (2-3 bullet points, including your strengths/skill set as they pertain to this role), and let us know your availability to interview or start.</p></div>",
-    "urlFetchPending": false,
-    "published": "Mar 26, 2018 5:46:17 PM",
-    "tags": [
-      "Administrative Assistant",
-      "Contract",
-      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
-      "Executive Assistant",
-      "Los Angeles",
-      "Office Administration",
-      "Office Management",
-      "Office Manager",
-      "REMOTE1/100",
-      "Remote OK",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
     ]
   }
 ]
