json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,45 @@
 {
  "items": [
   {
+    "id": "VNPd9-OzRLm427A9rgXp8w",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "workinstartups-programmers",
+    "url": "http://workinstartups.com/job-board/job/69405/ios-software-engineer-at-sonicjobs-app-ltd/",
+    "title": "iOS Software Engineer",
+    "content": "About<br />----- <br />We are Sonicjobs, a revolutionary Virtual Recruiter that is changing the way people find local jobs and candidates. Every day we help hundreds of managers hire the right people for their business and people find the right job, instantly. Our apps combine the skills of a recruiter with the power of an online job board. <br /><br />The role<br />--------<br />We are currently looking for an iOS Software Engineer to join our team and contribute to the evolution of our fast growing platform. The person covering the role is passionate about programming, knowledgeable about design patterns, curious about experimenting the best mobile interaction solutions and the most efficient mobile architectures. We are a distributed team and therefore an extremely good attitude to communication is also needed.<br />You'll be working on a mobile app powered by machine learning logic. We use agile methodologies and release frequently.<br /><br />Skills<br />---------------<br />* Strong knowledge of iOS SDK, Swift<br />* Apps deployed to the iTunes Store<br />* Strong understanding of design patterns and Object Oriented Programming<br />* Solid knowledge of iOS UI/UX design principles, patterns and best practices<br />* Solid knowledge of Auto Layout, Storyboards, XIBs<br />* In-depth experience of working with RESTful APIs<br />* Capable of writing robust, clean code<br />* Experience working in an Agile Scrum environment and collaborative tools (e.g Jira)<br />* Understanding of build processes and CI tooling (e.g. Jenkins, Fastlane)<br />* Experience with Instruments and advanced debugging<br />* Experience with the iTunesConnect release process<br />* Experience with Unit/UI testing (e.g. XCTest, Appium, Nimble, OHHttpStubs)<br />* Knowledge of Objective-C is a plus<br />* Excellent communication skills<br /><br />Opportunity<br />-----------<br />We are an easy going and focused startup team iterating on a validated and promising idea currently backed by a set of successful investors with a long experience in the sector. The platform will soon be scaling worldwide.<br />We are based in London, Finsbury Square.<br />This is a full-time permanent position.<br /><br />",
+    "urlFetchPending": false,
+    "published": "May 27, 2018 5:03:38 PM",
+    "tags": [
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG:surround``OR(locat, base, resid) 3W OR(berlin, london, pari)",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:layout/frontend/5",
+      "DBG_TECH1:k/t/w:machine-learning/bigdata-ml/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=26, go=0, nodejs=0, bigdata-ml=2, ruby=0, apple=18, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "European time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
     "id": "jdqgsek5RZ649-1w-N9PoA",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -127,6 +166,58 @@
     "tagsNames1": [
       "50% remote"
     ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
+    "id": "I4qLSa78QWS6ouEnuuaB1g",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/open-health-network/jobs/120532-mobile-application-developers",
+    "title": "Mobile application developers",
+    "content": "<div><h2>Mobile application developers at Open Health Network</h2><div>San Francisco Bay Area, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Java, HTML5 &amp; CSS3, Objective-C, iOS Development / Objective-C (Cocoa Touch)</div><div>Compensation</div><div>$100K–$150K<br>0.1%–0.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Mobile application developers with one or more of following:<br>iOS -- Objective C or Swift<br>Android -- Java<br>HTML5 -- Cordova / PhoneGap / Ionic</p><p>Positions are to be located in Washington, DC or San Francisco Bay Area. U.S. Citizens only, able to pass background check / Public Trust.</p></div>",
+    "urlFetchPending": false,
+    "published": "May 17, 2018 11:57:22 AM",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:html5/frontend/10",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:java/java/4",
+      "DBG_TECH1:k/t/w:java/mobile/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/9",
+      "DBG_TECH1:k/t/w:objective-c/c/6",
+      "DBG_TECH1:k/t/w:objective-c/mobile/24",
+      "DBG_TECH1:k/t/w:phonegap/gamedev/2",
+      "DBG_TECH1:k/t/w:phonegap/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=11, mobile=48, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=34, java=5, gamedev=2, php=0, embedded=0, frontend=10}",
+      "Full Time",
+      "HTML5 & CSS3",
+      "Java",
+      "Objective-C",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco Bay Area",
+      "Software Engineer",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown",
+      "iOS Development / Objective-C (Cocoa Touch)"
+    ],
+    "tagsNames1": [],
     "tagsNames2": [
       "apple",
       "mobile"
