json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,70 @@
 {
  "items": [
   {
+    "id": "Z1d08jFETjOHmy7oUugc6Q",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "hackernews",
+    "url": "https://news.ycombinator.com/item?id=17206554",
+    "title": "Scrapinghub | https://scrapinghub.com | 100% Remote (worldwide, all timezones!)",
+    "content": "<div>                  <span>Scrapinghub | <a href='https://scrapinghub.com' rel='nofollow'>https://scrapinghub.com</a> | 100% Remote (worldwide, all timezones!)<p>Scrapinghub is looking for Python Engineers, Erlang Developers, Test Engineers and more: <a href='https://scrapinghub.com/jobs' rel='nofollow'>https://scrapinghub.com/jobs</a></p><p>Quick summary of the open positions:</p><p>- Python Engineer (Web Scraping): you’ll be in charge of designing, developing and testing Scrapy web crawlers.</p><p>- Test Automation Engineer: you will build automated test frameworks and ad hoc test scripts to assist in the verification and validation of data quality.</p><p>- Erlang Developer/Tech Lead: you will lead/work with our Crawlera team in developing and maintaining a high load distributed system.</p><p>We're a fully distributed team with more than 120 Shubbers working from 30 countries, who are passionate about scraping, web crawling and data science.</p><p>You'll have the chance to work on projects that harvest and transfer datasets of thousands of millions of records, as well as build some of the systems that will deliver data to current Fortune 500 companies and the startups that are building great products on top of our stack.</p><p>We have a very engineering-driven culture (two engineer-founders) and a great place to work if you're self-directed, curious, and interested in working in open source environments. More on Open Source at Scrapinghub: <a href='http://scrapinghub.com/opensource/' rel='nofollow'>http://scrapinghub.com/opensource/</a>.</p><p>Scrapinghub continues to grow significantly this year and we're looking for great additions to our team, wherever you're located! Positions are fulltime (40hours per week) and fully remote.</p><p>You can apply here: <a href='https://scrapinghub.com/jobs' rel='nofollow'>https://scrapinghub.com/jobs</a></p><p>Got questions? Feel free to contact me at jessica@scrapinghub.com.<span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>",
+    "urlFetchPending": false,
+    "published": "Jun 1, 2018 6:55:05 PM",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``4N( OR(virtual,distribut,scatter), OR(compani,team,OR(organ,organis)))",
+      "DBG_TECH1:k/t/w:data-science/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:erlang/other/10",
+      "DBG_TECH1:k/t/w:python-developer/python/13",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:k/t/w:scrapy/python/8",
+      "DBG_TECH1:techWeightMap:{python=23, other=10, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/python",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "python"
+    ]
+  },
+  {
+    "id": "eUh28S9iTwmCABmKJr055g",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "hackernews",
+    "url": "https://news.ycombinator.com/item?id=17206169",
+    "title": "Education First, EF Class | London, UK | FULL-TIME | ONSITE or REMOTE | Backend Developer, Devops",
+    "content": "<div>                  <span>Education First, EF Class | London, UK | FULL-TIME | ONSITE or REMOTE | Backend Developer, Devops<p>We're a small startup-like team in a big company, building an iOS/Web app to teach English in public schools. Our app has been live for a couple of years now and we're expanding across Europe.</p><p>Our backend stack is AWS-based with lots of python and some golang. We're in the process of moving from EC2 pet servers to docker containers, we've deployed a few AWS Lambda already and are in the process of shipping our first AppSync API.</p><p>We're looking to expand our technical team with Backend Developers and Devops.</p><p>Here are some job ads and feel free to reach out to me with any questions: <a href='https://careers.ef.com/job/oVpT6fw3/' rel='nofollow'>https://careers.ef.com/job/oVpT6fw3/</a> <a href='https://careers.ef.com/job/odt86fwE/' rel='nofollow'>https://careers.ef.com/job/odt86fwE/</a><span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>",
+    "urlFetchPending": false,
+    "published": "Jun 1, 2018 6:27:06 PM",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:golang/go/8",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:techWeightMap:{python=2, other=0, dotnet=0, c=0, mobile=2, go=8, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/go",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "go"
+    ]
+  },
+  {
     "id": "BCuTWMxhQNOXSPJlxBnOow",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
