--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,55 @@
 {
  "items": [
   {
+    "id": "qtYZIcYmSu2XwZct5qfOSg",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "weworkremotely.com-programming",
+    "url": "https://weworkremotely.com/remote-jobs/x-team-ios-developer",
+    "title": "X-Team: iOS Developer",
+    "content": "<div>  <div>    <h2>iOS Developer</h2>      <h4>Posted May 29</h4>    <h3>      <span>X-Team</span><br>      <span>Headquarters: Remote</span><br>        <a href='https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board&amp;utm_campaign=wwr-q4-18' rel='nofollow'>https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board&amp;utm_campaign=wwr-q4-18</a>      <br>      <a rel='nofollow'>View all X-Team jobs →</a>    </h3>  </div>    </div>  <div>    <div><b>About X-Team</b></div><div><br></div><div>“Motivated developers, ready to join your team.”</div><div><br></div><div>X-Team is an international company founded in Melbourne, Australia that helps companies scale their development teams by providing them with extraordinary teams of developers from around the world.</div><div><br></div><div>We are 100% remote and believe in building a world where developers can have access to an environment of growth and incredible opportunities regardless of where they live.</div><div><br></div><div>We are also a community of people dedicated to unleashing our potential every day. We’ve fostered a unique, active lifestyle and culture around this idea that continues to attract thousands of developers to apply every day.</div><div><br></div><div>What separates us from our competition is the level of attention and care we give our developers compared to other more &quot;talent&quot;-based solutions. We proactively support them, fund their learning and growth, connect them in roaming hacker houses around the world, and give them a remote environment that motivates and inspires them on a daily basis. While other companies simply place and drop their talent, we provide unified teams of developers centered around the same beliefs, values and lifestyle.</div><div><br></div><div>We're uniquely situated to help shape how companies grow their businesses in the digital age and aid them in being able to do so properly with the right people.</div><div></div><div><br></div><div><b>About You:</b></div><div>The right individual will be self-driven. Someone who cares about maintainability of the code, automation, deployment processes and how to enable innovation through fostering a growing culture of Open Source. You will go beyond just coding and help to shape the engineering culture and best practices.</div><div></div><div><br></div><div><b>Most important:</b></div><div>- 3+ years of experience in mobile iOS Development</div><div>- Experience with Objective-C, CSS, Javascript, HTML</div><div>- Experience with JSON, XML, SOAP, REST</div><div>- Experience with server side technologies (Java, NodeJS, PHP)</div><div>- Experience storing and indexing data</div><div>- Knowledge of Swift and Xcode</div><div>- Code optimization and performance improvements</div><div>- Write well designed, testable, efficient code</div><div><br></div><div><b>Nice to have:</b></div><div>- Experience with working remotely</div><div>- Familiar/involved with open­ source projects</div><div></div><div><br></div><div><b>Personal:</b></div><div>- Independent, self-motivated</div><div>- Fluent in English, written and spoken</div><div>- Proven track record of always learning and growing.</div><div>- Proactive attitude</div><div>- Possess a spirit of generosity</div><div></div><div></div><div><br></div><div><b>Perks:</b></div><div>- Get the chance to work with big brands like Riot Games, Fox Broadcasting, Kaplan Inc., etc.</div><div>- Live and work in one of our roaming hacker houses (X-Outposts) around the world. http://x-outpost.com</div><div>- Work from anywhere as part of a community of digital nomads.</div><div>- Join our vibrant community, filled with opportunities to learn new skills together in study groups, join clubs (photography, gaming, etc.) and get free camera equipment/games/conferences/courses/massages/etc., charitable fundraisers, fitness &amp; yoga programs (+gym membership), etc. This is the community to be in if you're a remote developer.</div><div>- We’ll provide up to $2,500 in funding for your learning and growth through our Unleash program, which provides opportunities to unleash your potential through initiatives that help you grow as a developer and explore your passions more each day. (http://x-team.com/unleash)</div><div><br></div><div><b>FAQ:</b></div><div>Who is X-Team meant for?</div><div>- Any freelance developers with experience working on high-scale, remote teams and projects with a motivated, proactive attitude and compassionate, team-player heart. If you've worked with freelancing platforms before, that's not what we are. X-Team is a community of all likeminded people, carefully chosen to ensure we are able to create an environment of the most motivated people in the world who come together to unleash their potential. What we've created is truly special and not a faceless platform. X-Team is where developers go to feel truly at home together, while becoming more motivated than they've ever been.</div><div><br></div><div>What are you hiring for right now?</div><div>- We are hiring for PHP developers to fill some exciting new opportunities we have. We're also hiring for a variety of other skills, such as React, React Native, Cryptocurrency/blockchain, Node.js, Salesforce, DevOps, and Golang.</div><div><br></div><div>Will I get a job immediately after applying?</div><div>- If your skills, experience and values align with a current opening we have, your chances of getting hired immediately are high. If we discover you're qualified but all opportunities have been taken, we'll continue to work with you to help you get a role in X-Team. The key is having the most relevant, in-demand skills when you apply.</div><div><br></div><div>What kind of opportunities do you provide?</div><div>- We provide full-time opportunities that last, on average, for 10 months. After your role ends (and so long as you've performed well), we continue to give you work internally with us until we find you a new opportunity. This ensures that X-Team can be a stable work option for you as a freelancer.</div><div><br></div>  </div>  <div>    <h4>Apply for this position</h4>    <p>Apply here: <a href='https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board&amp;utm_campaign=wwr-q4-18' rel='nofollow'>https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board&amp;utm_campaign=wwr-q4-18</a></p>  </div>",
+    "urlFetchPending": false,
+    "published": "May 29, 2018 4:00:59 PM",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:go/go/6",
+      "DBG_TECH1:k/t/w:golang/go/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:node.js/nodejs/26",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/10",
+      "DBG_TECH1:k/t/w:reactjs/frontend/16",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=31, go=14, nodejs=27, bigdata-ml=0, ruby=0, apple=22, java=2, gamedev=0, php=10, embedded=0, frontend=20}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TECH1/nodejs",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile",
+      "nodejs"
+    ]
+  },
+  {
     "id": "VNPd9-OzRLm427A9rgXp8w",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
