json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,58 @@
 {
  "items": [
   {
+    "id": "gf0x1JxEQEOleunb5NsARA",
+    "url": "https://angel.co/simon-data/jobs/113300-senior-software-engineer-core-data",
+    "title": "Senior Software Engineer, Core & Data",
+    "tags": [
+      "Amazon Redshift",
+      "Amazon S3",
+      "Amazon Web Services",
+      "DBG:surround``5N( opportun,             2N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:core-data/apple/24",
+      "DBG_TECH1:k/t/w:data-science/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:hadoop/bigdata-ml/16",
+      "DBG_TECH1:k/t/w:machine-learning/bigdata-ml/4",
+      "DBG_TECH1:k/t/w:python/python/4",
+      "DBG_TECH1:techWeightMap:{python=4, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=28, ruby=0, apple=24, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Data Engineering",
+      "Data Visualization",
+      "Full Time",
+      "Hadoop",
+      "Machine Learning",
+      "New York City",
+      "Python",
+      "REMOTE1/100",
+      "Remote OK",
+      "SQL",
+      "Software Engineer",
+      "TECH1/apple",
+      "TECH1/bigdata-ml",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 0,
+      "maxValue": 0,
+      "unit": "DAY"
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 5, 2018 5:23:57 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Senior Software Engineer, Core &amp; Data at Simon Data</h2><div>New York City, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Python, Data Visualization, Hadoop, Machine Learning, SQL, Amazon Web Services, Amazon S3, Amazon Redshift, Data Engineering</div><div>Compensation</div><div>$95K–$175K<br>0.1%–1.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Successful engineering teams are built on trust and purpose. At Simon Data we take that literally. We take pride in what we do every day and how we do it. Providing great software to our customers is rewarding and energizing. We've found a rapidly expanding sweet spot in marketing software and are diversifying our engineering team to keep up with the demand. </p><p>New engineers are welcomed into a team of smart and passionate engineers who love data and writing pragmatic code. We believe that you code better when you know how your work connects to the product and our clients. We also believe that you code better when you're surrounded by other engineers who want you to succeed. This attitude is core to our values.</p><p>As a Core &amp; Data Software Engineer, you'll be exposed to the core of our software and the data it keeps. From your first day on the job, you'll have the opportunity to:</p><p>- Interface with data from dozens of clients, each of which have upwards of a terabyte of data (SQL technologies). <br>- Own the build out our data pipe, aggregating data from both structured and unstructured sources (Hadoop, Spark, HDFS, EMR, Redshift). <br>- Scale and optimize our client facing data warehouse that provides real-time interactivity across millions of rows of data (Redshift, Elasticsearch).<br>- Lead development of statistical models and predictive technology to improve our experimentation and segmentation tooling (Machine learning, D3). <br>- Develop critical features to in our python software stack. <br>- Collaborate with an engineering team who is passionate about quality, staying ahead of the curve, and teamwork.</p><p>Our clients rely on us for accurate data and availability. Making mistakes in our business has direct effects on our clients' customers. We take both of these facts very seriously. At odds with this, Simon embraces the startup ethos of keeping lean and focused. We move quickly (continuous deployment) and emphasize experimentation to test hypotheses. To help us keep a high bar of quality, you'll bring a mindset for creativity and fault tolerance to your work every day.</p><p>Simon's engineering team is distributed across four states; we welcome engineers working at our New York City offices as well as remote employees.</p><p>We are an equal opportunity employer and value diversity at our company. We do not discriminate on the basis of race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability.</p><p>We'd love to meet you and learn more about your career goals.</p></div>"
+  },
+  {
     "id": "qtYZIcYmSu2XwZct5qfOSg",
     "url": "https://weworkremotely.com/remote-jobs/x-team-ios-developer",
     "title": "X-Team: iOS Developer",
